chore: fix overflow issues

--- a/web/app/assets/stylesheets/components/_release.scss
+++ b/web/app/assets/stylesheets/components/_release.scss
@@ -84,7 +84,8 @@
   }
 
   &__left-column {
-    flex: 0 1 100px;
+    flex: 0 1 25%;
+    margin-right: 10px;
   }
 
   &__right-column {
@@ -98,6 +99,8 @@
     font-size: 10px;
     font-weight: 300;
     line-height: 1.6;
+    /* Prevent text from overflowing left column */
+    overflow-wrap: anywhere;
   }
 
   &__title,
